# LabWork4Sem3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
TLists/: CMakeLists.txt  TLists.h
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_Lists.cpp  test_main.cpp
